# JJabloverNote

./: .env.example  .gitignore  DEVLOG.md  README.md  app.py  diarization.py  pyproject.toml  transcribe.py
static/: index.html  script.js  style.css
